<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_add"
        android:icon="@drawable/ic_fav_black_48dp"
        android:title="@string/action_add"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_fav_black_48dp"
        android:title="@string/action_search"
        app:showAsAction="always"/>

    <item android:id="@+id/action_select"
        android:title="@string/action_select"
        app:showAsAction="never"/>
    <item android:id="@+id/action_zoom"
        android:title="@string/action_zoom"
        app:showAsAction="never"/>
    <item android:id="@+id/action_reload"
        android:title="@string/action_reload"
        app:showAsAction="never"/>
    <item android:id="@+id/action_trash"
        android:title="@string/action_trash"
        app:showAsAction="never"/>
    <item android:id="@+id/action_vault"
        android:title="@string/action_vault"
        app:showAsAction="never"/>
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never"/>


</menu>