<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_add"
        android:icon="@drawable/ic_add_black"
        android:title="@string/action_add"
        android:showAsAction="always"
        tools:ignore="AppCompatResource"/>

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_black"
        android:title="@string/action_search"
        android:showAsAction="always"
       tools:ignore="AppCompatResource"/>

    <item android:id="@+id/action_select"
        android:title="@string/action_select"
        android:showAsAction="never"
        tools:ignore="AppCompatResource"/>
    <item android:id="@+id/action_zoom"
        android:title="@string/action_zoom"
        android:showAsAction="never"
        tools:ignore="AppCompatResource"/>
    <item android:id="@+id/action_reload"
        android:title="@string/action_reload"
        android:showAsAction="never"
        tools:ignore="AppCompatResource"/>
    <item android:id="@+id/action_trash"
        android:title="@string/action_trash"
        android:showAsAction="never"
        tools:ignore="AppCompatResource"/>
    <item android:id="@+id/action_vault"
        android:title="@string/action_vault"
        android:showAsAction="never"
        tools:ignore="AppCompatResource"/>
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:showAsAction="never"
        tools:ignore="AppCompatResource"/>


</menu>