<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:paddingHorizontal="12dp"
    android:orientation="vertical" android:gravity="center_horizontal">

    <LinearLayout
        android:layout_width="match_parent" android:layout_height="match_parent"
        android:orientation="vertical">
        <RadioGroup android:id="@+id/sort_radio_group_method"
            android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:text="@string/info_sort_method" android:textStyle="bold" android:textSize="20sp"/>
            <RadioButton android:id="@+id/sort_radio_by_name"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:text="@string/action_sort_by_name" android:checked="true"/>
            <RadioButton android:id="@+id/sort_radio_by_date"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:text="@string/action_sort_by_date"/>
        </RadioGroup>

        <RadioGroup android:id="@+id/sort_radio_group_order"
            android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:text="@string/info_sort_order" android:textStyle="bold" android:textSize="20sp"/>
            <RadioButton android:id="@+id/sort_radio_ascending"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:text="@string/action_sort_ascending" android:checked="true"/>
            <RadioButton android:id="@+id/sort_radio_descending"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:text="@string/action_sort_descending"/>
        </RadioGroup>

        <LinearLayout android:id="@+id/sort_err_row"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:paddingVertical="4dp" android:layout_gravity="center_horizontal"
            android:orientation="horizontal" android:gravity="center_vertical">
            <ImageView
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:src="@drawable/ic_error" app:tint="@color/red"/>
            <TextView android:id="@+id/sort_err"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:text="@string/placeholder_info_err" android:layout_marginStart="24dp"
                android:textStyle="bold" android:textColor="@color/red"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:paddingVertical="4dp"
            android:orientation="horizontal" android:gravity="center_vertical">
            <Button android:id="@+id/sort_cancel_btn"
                android:layout_width="0dip" android:layout_height="wrap_content"
                android:layout_weight=".5" android:layout_marginHorizontal="40dp"
                android:text="@string/action_close" android:backgroundTint="@color/primary"/>
            <Button android:id="@+id/sort_sort_btn"
                android:layout_width="0dip" android:layout_height="wrap_content"
                android:layout_weight=".5" android:layout_marginHorizontal="40dp"
                android:text="@string/action_sort" android:backgroundTint="@color/primary"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>