<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- "Mark Favorite", should appear as action button if possible -->
    <item
        android:id="@+id/action_info"
        android:icon="@drawable/ic_info"
        android:title="@string/action_info"
        app:showAsAction="always"
        tools:ignore="AppCompatResource"/>

    <!-- Settings, should always be in the overflow -->
    <item android:id="@+id/action_wallpaper"
        android:title="@string/action_wallpaper"
        app:showAsAction="never"
        tools:ignore="AppCompatResource"/>
    <item android:id="@+id/action_delete"
        android:title="@string/action_delete"
        app:showAsAction="never"
        tools:ignore="AppCompatResource"/>
</menu>