<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  xmlns:app="http://schemas.android.com/apk/res-auto">
  <!-- "Mark Favorite", should appear as action button if possible -->
  <item
    android:id="@+id/action_favorite"
    android:icon="@drawable/ic_fav_outline"
    android:title="@string/fragment_favorite"
    app:showAsAction="always"
    tools:ignore="AppCompatResource" />
  <!--    <item-->
  <!--        android:id="@+id/action_edit"-->
  <!--        android:icon="@drawable/ic_edit"-->
  <!--        android:title="@string/action_edit"-->
  <!--        app:showAsAction="always"-->
  <!--        tools:ignore="AppCompatResource"/>-->
  <item
    android:id="@+id/action_share"
    android:icon="@drawable/ic_share"
    android:title="@string/action_share"
    app:showAsAction="always"
    tools:ignore="AppCompatResource" />
  <item
    android:id="@+id/action_delete"
    android:icon="@drawable/ic_trash"
    android:title="@string/action_delete"
    app:showAsAction="always"
    tools:ignore="AppCompatResource" />
</menu>