<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="12dp"
            android:orientation="vertical" android:gravity="center">
        <TextView android:id="@+id/generate_progress"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/info_faces_processing"
                  android:textAlignment="center"
                  android:paddingVertical="4dp"/>
        <ProgressBar android:id="@+id/generate_progress_bar"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:progressTint="@color/primary"
                     style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                     android:max="100" android:progress="40"
                     android:indeterminate="false"
                     android:layout_marginHorizontal="50dp"
                     android:paddingVertical="4dp"/>
        <TextView android:id="@+id/generate_progress_info"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/placeholder_info_fileLocation"
                  android:textAlignment="center" android:textSize="12sp"
                  android:textStyle="italic" android:paddingVertical="4dp"/>

        <LinearLayout android:id="@+id/generate_err_row"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:paddingVertical="4dp"
                      android:orientation="horizontal" android:gravity="center">
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_error" app:tint="@color/red"/>
            <TextView android:id="@+id/generate_err"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/placeholder_info_err"
                      android:textStyle="bold" android:textColor="@color/red"/>
        </LinearLayout>
        <Button android:id="@+id/generate_close_btn"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/action_close"
                android:backgroundTint="@color/primary"
                android:paddingVertical="4dp"/>
    </LinearLayout>

</RelativeLayout>