<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:paddingHorizontal="12dp"
              android:orientation="vertical"
              android:gravity="center_horizontal">

    <LinearLayout android:id="@+id/info_err_row"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:paddingVertical="4dp"
                  android:orientation="horizontal"
                  android:gravity="center_vertical">
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_error" app:tint="@color/red"/>
        <TextView android:id="@+id/info_err"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/placeholder_info_err"
                  android:layout_marginStart="24dp"
                  android:textStyle="bold" android:textColor="@color/red"/>
    </LinearLayout>

    <LinearLayout android:id="@+id/info_fileName_row"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:paddingVertical="4dp"
                  android:orientation="horizontal"
                  android:gravity="center_vertical">
        <ImageView android:id="@+id/info_fileName_img"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:src="@drawable/ic_image" app:tint="@color/black"/>
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <TextView android:id="@+id/info_fileName"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:text="@string/placeholder_info_filename"
                      android:layout_marginStart="24dp"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout android:id="@+id/info_fileLocation_row"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:paddingVertical="4dp"
                  android:orientation="horizontal"
                  android:gravity="center_vertical">
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_album" app:tint="@color/black"/>
        <TextView android:id="@+id/info_fileLocation"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/placeholder_info_fileLocation"
                  android:layout_marginStart="24dp"/>
    </LinearLayout>

    <LinearLayout android:id="@+id/info_description_row"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:paddingVertical="4dp"
                  android:orientation="horizontal">
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_info" app:tint="@color/black"/>
        <TextView android:id="@+id/info_description"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  tools:text="@tools:sample/lorem/random" tools:maxLength="120"
                  android:layout_marginStart="24dp"/>
    </LinearLayout>

    <LinearLayout android:id="@+id/info_imageSize_row"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:paddingVertical="4dp"
                  android:orientation="horizontal"
                  android:gravity="center_vertical">
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_dimen" app:tint="@color/black"/>
        <TextView android:id="@+id/info_imageSize"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/placeholder_info_imageSize"
                  android:layout_marginStart="24dp"/>
    </LinearLayout>

    <LinearLayout android:id="@+id/info_camera_row"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:paddingVertical="4dp"
                  android:orientation="horizontal"
                  android:gravity="center_vertical">
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_camera" app:tint="@color/black"/>
        <TextView android:id="@+id/info_camera"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/placeholder_info_camera"
                  android:layout_marginStart="24dp"/>
    </LinearLayout>

    <LinearLayout android:id="@+id/info_map_row"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:paddingVertical="4dp"
                  android:orientation="horizontal">
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_map" app:tint="@color/black"/>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="24dp">
            <TextView android:id="@+id/info_map"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:text="@string/placeholder_info_map"/>
            <com.google.android.gms.maps.MapView android:id="@+id/info_map_view"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="120dp"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="4dp"
            android:orientation="horizontal" android:gravity="center_vertical">
        <Button android:id="@+id/info_close_btn"
                android:layout_width="0dip" android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:layout_marginHorizontal="40dp"
                android:text="@string/action_close"
                android:backgroundTint="@color/primary"/>
        <Button android:id="@+id/info_edit_btn"
                android:layout_width="0dip" android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:layout_marginHorizontal="40dp"
                android:text="@string/action_edit"
                android:backgroundTint="@color/primary"/>
    </LinearLayout>
</LinearLayout>