<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context=".AboutActivity">
  <androidx.appcompat.widget.Toolbar android:id="@+id/menu_about"
                                     android:layout_width="match_parent"
                                     android:layout_height="?attr/actionBarSize"
                                     android:background="@android:color/transparent"
                                     android:elevation="4dp"
                                     android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
                                     android:popupTheme="?popupTheme"/>

  <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:orientation="vertical" android:gravity="center"
          android:paddingBottom="?attr/actionBarSize">
    <androidx.cardview.widget.CardView
            android:layout_width="54dp" android:layout_height="54dp"
            app:cardCornerRadius="20dp">
      <ImageView
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:foreground="@mipmap/ic_launcher"
              android:scaleType="centerCrop"
              android:background="@drawable/ic_launcher_background"/>
    </androidx.cardview.widget.CardView>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name" android:textStyle="bold"
            android:textSize="10pt"
            android:layout_marginBottom="12dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_description"
            android:layout_marginBottom="8dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_credits" android:textSize="5pt"/>

  </LinearLayout>
</LinearLayout>